# demo

./: CMakeLists.txt  README.md  TheEmployeesSalary.h  check_env.sh  runner.sh  task.cu  task_unsafe.cu
